[package]
name = "sudoku_solve"
version = "0.1.0"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
tui = { version = "*", features = ["crossterm"] }
crossterm = "*"
crossbeam-channel = "*"
dashmap = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
