[package]
name = "sudoku_solve"
version = "0.1.0"
authors = ["Isaac Mills <rooster0055@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "*"
dashmap = "*"
serde_json = "*"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "*"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
